changed the method

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 <body>
 <h1>Time to find our Akan Names.</h1>
+<img src="./img/images (1).jpeg" class="img" alt="">
     <p>
         Akan are names in Ghana, where children born on certain day of the week, they will be named after the day they were born.
         This Application is used to display the day you were born, and also display your Akan Name.
     </p>
     <h3>Lets check your Akan name!</h3>
-    <form action="">
+    <form action="" class="about-container">
         <input type="text" name="dateProvided" id="dateProvided" placeholder="mm/dd/yyyy">
         <input type="radio" id="female" name="gender" value="female">
         <label for="female">Female</label>
