added some js files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
    
 
 
@@ -23,7 +24,7 @@
         <label for="female">Female</label>
         <input type="radio" id="male" name="gender" value="male">
         <label for="male">Male</label>
-        <button onclick="myFunction(); return false;">submit</button>
+        <button onclick="myFunction(); return getAkanName;">submit</button>
         <p id="message">
         
         </p>
