everything good now

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         This Application is used to display the day you were born, and also display your Akan Name.
     </p>
     <h3>Lets check your Akan name!</h3>
+    <div class="items">
     <form action="" class="form" id="form">
         <div class="form-control">
             <label for="birthday">Birthday</label>
@@ -33,6 +34,7 @@
         </select>
         <button>submit</button>
     </form>
+    </div>
     <!-- <form action="" class="about-container">
         <input type="text" name="dateProvided" id="dateProvided" placeholder="mm/dd/yyyy">
         <input type="radio" id="female" name="gender" value="female">
