--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
     <p id="result">
         
     </p>
-    
+    <footer>
+        <img src="./img/download (4).png" alt="">
+        <img src="./img/download (7).png" alt="">
+    </footer>
+    <br>
     <script src="./js/script.js" type="text/JavaScript"></script>
 </body>
 </html>
